--- a/app/index.html
+++ b/app/index.html
@@ -13,25 +13,44 @@
 	<script src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="js/services/alert.js"></script>
 	<script src="js/services/database.js"></script>
-	<script src="js/controllers/dashboard.js"></script>
+	<script src="js/controllers/main.js"></script>
 	<script src="js/controllers/library.js"></script>
 	<script src="js/controllers/logbook.js"></script>
 	<script src="js/controllers/login.js"></script>
 	<script src="js/app.js"></script>
 </head>
-<body>
-	<nav class="navbar navbar-default navbar-static-top">
+<body ng-controller="MainCtrl">
+	<nav class="navbar navbar-default navbar-static-top" ng-show="isNavVisible">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" ui-sref="dashboard.logbook">
+				<a class="navbar-brand" ui-sref="logbook">
 					<img src="images/wsbflady_100.png" height="30" width="30" alt="WSBF logo"/>
 				</a>
 			</div>
+
+			<ul class="nav navbar-nav navbar-right">
+				<li>
+					<a ui-sref="library">Music Library</a>
+				</li>
+				<li>
+					<a ui-sref="logbook">Logbook</a>
+				</li>
+				<li>
+					<a ng-click="logout()">Log out</a>
+				</li>
+			</ul>
 		</div>
 	</nav>
 
 	<div class="container-fluid">
         <ui-view></ui-view>
+	</div>
+
+	<div id="alerts">
+		<uib-alert ng-repeat="a in alert.alerts" type="{{a.type}}" close="alert.remove($index)">
+			<strong>{{a.header}}</strong>
+			<span>{{a.message}}<span>
+		</uib-alert>
 	</div>
 </body>
 </html>
