Added carts view

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 	<script src="js/services/alert.js"></script>
 	<script src="js/services/database.js"></script>
 	<script src="js/controllers/main.js"></script>
+	<script src="js/controllers/carts.js"></script>
 	<script src="js/controllers/library.js"></script>
 	<script src="js/controllers/logbook.js"></script>
 	<script src="js/controllers/login.js"></script>
@@ -30,7 +31,10 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a ui-sref="library">Music Library</a>
+					<a ui-sref="library">Albums</a>
+				</li>
+				<li>
+					<a ui-sref="carts">Carts</a>
 				</li>
 				<li>
 					<a ui-sref="logbook">Logbook</a>
