Renamed logbook to queue

--- a/app/index.html
+++ b/app/index.html
@@ -16,15 +16,15 @@
 	<script src="js/controllers/main.js"></script>
 	<script src="js/controllers/carts.js"></script>
 	<script src="js/controllers/library.js"></script>
-	<script src="js/controllers/logbook.js"></script>
 	<script src="js/controllers/login.js"></script>
+	<script src="js/controllers/queue.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body ng-controller="MainCtrl">
 	<nav class="navbar navbar-default navbar-static-top" ng-show="isNavVisible">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" ui-sref="logbook">
+				<a class="navbar-brand" ui-sref="queue">
 					<img src="images/wsbflady_100.png" height="30" width="30" alt="WSBF logo"/>
 				</a>
 			</div>
@@ -37,7 +37,7 @@
 					<a ui-sref="carts">Carts</a>
 				</li>
 				<li>
-					<a ui-sref="logbook">Logbook</a>
+					<a ui-sref="queue">Queue</a>
 				</li>
 				<li>
 					<a ng-click="logout()">Log out</a>
