--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 	<script src="js/app.js"></script>
 </head>
 <body ng-controller="MainCtrl">
-	<nav class="navbar navbar-default navbar-static-top" ng-show="isNavVisible">
+	<nav class="navbar navbar-default navbar-static-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" ui-sref="queue">
@@ -39,8 +39,11 @@
 				<li>
 					<a ui-sref="queue">Queue</a>
 				</li>
-				<li>
-					<a ng-click="logout()">Log out</a>
+				<li ng-show="!user">
+					<a href="" ng-click="login()">Log in</a>
+				</li>
+				<li ng-show="user">
+					<a href="" ng-click="logout()">Log out</a>
 				</li>
 			</ul>
 		</div>
