Added queue service to preserve play queue

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
 	<script src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="js/services/alert.js"></script>
 	<script src="js/services/database.js"></script>
+	<script src="js/services/queue.js"></script>
 	<script src="js/controllers/main.js"></script>
 	<script src="js/controllers/carts.js"></script>
 	<script src="js/controllers/library.js"></script>
