Renamed wizbif to app

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="wizbif" ng-strict-di>
+<html lang="en" ng-app="app" ng-strict-di>
 <head>
 	<title>Radical</title>
 	<meta charset="UTF-8">
