Added videogular module

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,11 @@
 
 	<script src="../node_modules/angular/angular.min.js"></script>
 	<script src="../node_modules/angular-resource/angular-resource.min.js"></script>
+	<script src="../node_modules/angular-sanitize/angular-sanitize.min.js"></script>
 	<script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
 	<script src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="../node_modules/videogular/dist/videogular/videogular.js"></script>
+	<script src="../node_modules/videogular/dist/controls/vg-controls.js"></script>
 	<script src="js/services/alert.js"></script>
 	<script src="js/services/database.js"></script>
 	<script src="js/services/queue.js"></script>
